# guile-osc

./: README.md  guile-osc.c  meson.build
.github/workflows/: main.yml
examples/: eos-test.scm  ma3-x1k2.scm
open-sound-control/: api.scm  client.scm  server-thread.scm  server.scm
